--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "dom"
     ],
     "strictPropertyInitialization": false,
+    "strictFunctionTypes": false,
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
